--- a/requirements.txt
+++ b/requirements.txt
@@ -1,24 +1,18 @@
+aniso8601==9.0.1
 apispec==5.1.1
-backports.entry-points-selectable==1.1.0
 click==8.0.3
-colorama==0.4.4
-distlib==0.3.3
-filelock==3.3.1
 Flask==2.0.2
 flask-apispec==0.11.0
 Flask-RESTful==0.3.9
 Flask-SQLAlchemy==2.5.1
 greenlet==1.1.2
-gunicorn==20.1.0
 itsdangerous==2.0.1
 Jinja2==3.0.2
 MarkupSafe==2.0.1
 marshmallow==3.13.0
 mysqlclient==2.0.3
-platformdirs==2.4.0
 pytz==2021.3
 six==1.16.0
 SQLAlchemy==1.4.25
-virtualenv==20.9.0
 webargs==8.0.1
 Werkzeug==2.0.2
